updated font size of cart preview icon element to avoid overflow with hamburger menu and search bar on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -327,6 +327,20 @@ footer a:hover {
     }
 }
 
+@media screen and (max-width: 414px) {
+    .cart-preview-dropdown {
+        top: 16px;
+        font-size: 0.5rem;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .cart-preview-dropdown {
+        top: 12px;
+        font-size: .75rem;
+    }
+}
+
 @media screen and (max-width: 991px) {
     .navbar-brand {
         position: fixed;
